// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-columns-field Renders \`c-columns-field\` with custom props 1`] = `
<div
  class="layout column"
>
  <c-card-iterator-field-stub
    class=""
    data="[object Object],[object Object]"
    handle=".column-drag-handle"
    itemkey="_id"
  />
  <div
    class="layout justify-end"
  >
    <span
      class="v-tooltip v-tooltip--left"
    >
      <!---->
      <button
        class="mt-3 v-btn v-btn--is-elevated v-btn--fab v-btn--has-bg v-btn--round theme--light v-size--small primary"
        type="button"
      >
        <span
          class="v-btn__content"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate material-icons theme--light"
          >
            add
          </i>
        </span>
      </button>
    </span>
  </div>
</div>
`;

exports[`c-columns-field Renders \`c-columns-field\` with default props 1`] = `
<div
  class="layout column"
>
  <c-card-iterator-field-stub
    class="empty"
    data=""
    handle=".column-drag-handle"
    itemkey="_id"
  />
  <div
    class="layout justify-end"
  >
    <span
      class="v-tooltip v-tooltip--left"
    >
      <!---->
      <button
        class="mt-3 v-btn v-btn--is-elevated v-btn--fab v-btn--has-bg v-btn--round theme--light v-size--small primary"
        type="button"
      >
        <span
          class="v-btn__content"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate material-icons theme--light"
          >
            add
          </i>
        </span>
      </button>
    </span>
  </div>
</div>
`;
